--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
+    <link rel="icon" type="ico" href="img/yellowicoN.ico">
 <!--
     
 TemplateMo 556 Catalog-Z
@@ -26,9 +27,10 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img href="" class=""></img>
-                Para ELLA y EL PASIÓN
+            <img src="img/crema.png" id="QRE">
+            <a class="navbar-brand" href="index.html">
+                PASIÓN PARA ELLA Y ÉL<br>
+                                    <span class="descr">Productos corporales y de belleza</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -68,7 +70,7 @@ https://templatemo.com/tm-556-catalog-z
             </h2>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
-                    Page <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> of ...
+                    HOJA <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> DE ...
                 </form>
             </div>
         </div>
@@ -301,8 +303,8 @@ https://templatemo.com/tm-556-catalog-z
         <div class="container-fluid tm-container-small">
             <div class="row">
                 <div class="col-lg-6 col-md-12 col-12 px-5 mb-5">
-                    <h3 class="tm-text-primary mb-4 tm-footer-title">¿QUÉ ES PASIÓN PARA ELLA  EL?</h3>
-                    <img href="img/logopasionellayel.jpg" id=""></img>
+                    <h3 class="tm-text-primary mb-4 tm-footer-title">¿QUÉ ES PASIÓN PARA ELLA Y PARA ÉL?</h3>
+                    <img src="img/ElvispresleeyQRc.png" id="QRR">
                     <p>Catalog-Z is free <a rel="sponsored" href="https://v5.getbootstrap.com/">Bootstrap 5</a> Alpha 2 HTML Template for video and photo websites. You can freely use this TemplateMo layout for a front-end integration with any kind of CMS website.</p>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
