--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/crema.png" id="QRE">
+            <img src="img/logopasionellayel.jpg" id="QRE">
             <a class="navbar-brand" href="index.html">
                 PASIÓN PARA ELLA Y ÉL<br>
-                                    <span class="descr">Productos corporales y de belleza</span>
+                                    <span class="descr">PRODUCTOS DE CUIDADO CORPORAL Y BELLEZA</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
@@ -66,7 +66,7 @@ https://templatemo.com/tm-556-catalog-z
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                FOTOS RECIENTES
+                RETRO_MAKEUP, PASIÓN PARA ELLA Y ÉL
             </h2>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
@@ -77,23 +77,23 @@ https://templatemo.com/tm-556-catalog-z
         <div class="row tm-mb-90 tm-gallery">
         	<div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/productelv.jpg" alt="Image" class="img-fluid">
+                    <img src="img/corporalcream.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>HUMECTANTES CORPORALES </h2>
-                        <a href="photo-detail.html">Saber más</a>
+                        <a href="photo-detail.html">VER: Piel Pasión por ti </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">12 Ene 2025</span>
+                    <span class="tm-text-gray-light">24 Ene 2025</span>
                     <span>1,203 visitas</span>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/productelv2.jpg" alt="Image" class="img-fluid">
+                    <img src="img/calavperfum.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>PERFUMERÍA </h2>
-                        <a href="photo-detail.html">Saber más</a>
+                        <a href="photo-detail.html">FRAGANCIAS </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -103,10 +103,10 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/athela.jpg" alt="Image" class="img-fluid">
+                    <img src="img/makeup.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>ENTRENAMIENTO FITNESS </h2>
-                        <a href="photo-detail.html">View more</a>
+                        <h2>MAQUILLAJE </h2>
+                        <a href="photo-detail.html">VER ESTILOS</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -116,10 +116,10 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-.jpg" alt="Image" class="img-fluid">
+                    <img src="img/video-game-developer.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Pinky</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <h2>otros servicios. </h2>
+                        <a href="photo-detail.html">INSPECCIONAR </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -283,7 +283,7 @@ https://templatemo.com/tm-556-catalog-z
                     <span class="tm-text-gray-light">3 Aug 2020</span>
                     <span>21,204 views</span>
                 </div>
-            </div>         
+            </div>
         </div> <!-- row -->
         <div class="row tm-mb-90">
             <div class="col-12 d-flex justify-content-between align-items-center tm-paging-col">
@@ -305,7 +305,14 @@ https://templatemo.com/tm-556-catalog-z
                 <div class="col-lg-6 col-md-12 col-12 px-5 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">¿QUÉ ES PASIÓN PARA ELLA Y PARA ÉL?</h3>
                     <img src="img/ElvispresleeyQRc.png" id="QRR">
-                    <p>Catalog-Z is free <a rel="sponsored" href="https://v5.getbootstrap.com/">Bootstrap 5</a> Alpha 2 HTML Template for video and photo websites. You can freely use this TemplateMo layout for a front-end integration with any kind of CMS website.</p>
+                    <p>Pasión para ella y él. Es un proyecto tipo emprendimiento que relaciona <a href=""><font color="red"> RETRO.</font> </a>Con las demás caracteristicas
+                    que acompañan el proceso de estetica,cuidado y preparacion para las personas.<br>
+                <span class="enlaceend"> LOS ENLACES A RETRO:</span></p>
+                <ul>
+                    <li><a href="">RETRO GAMER.</a></li>
+                    <li><a href="">RETRO FITNESS.</a></li>
+                    <li><a href="">PASIÓN PARA ELLA Y ÉL.</a></li>
+                </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">OTROS ENLACES</h3>
@@ -340,7 +347,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-             15 de enero de 2025, 10:50 a.m.</span>
+             24 de enero de 2025, 12:45 p.m.</span>
     </footer>
     
     <script src="js/plugins.js"></script>
