--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/logopasionellayel.jpg" id="QRE">
+            <img src="img/LOGO.png" id="QRE">
             <a class="navbar-brand" href="index.html">
-                PASIÓN PARA ELLA Y ÉL<br>
+                TU PIEL, PASIÓN POR TÍ<br>
                                     <span class="descr">PRODUCTOS DE CUIDADO CORPORAL Y BELLEZA</span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,7 @@ https://templatemo.com/tm-556-catalog-z
     <div class="container-fluid tm-container-content tm-mt-60">
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                RETRO_MAKEUP, PASIÓN PARA ELLA Y ÉL
+                RETRO, PASIÓN PARA ELLA Y ÉL
             </h2>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
@@ -80,7 +80,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/corporalcream.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>HUMECTANTES CORPORALES </h2>
-                        <a href="photo-detail.html">VER: Piel Pasión por ti </a>
+                        <a href="portfolio/humectantes/HUMECTANT.html">VER: Piel, Pasión por ti </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -93,11 +93,11 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/calavperfum.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>PERFUMERÍA </h2>
-                        <a href="photo-detail.html">FRAGANCIAS </a>
+                        <a href="perfum.html">FRAGANCIAS </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">13 Ene 2025</span>
+                    <span class="tm-text-gray-light">24 Ene 2025</span>
                     <span>6,100 views</span>
                 </div>
             </div>
@@ -106,11 +106,11 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/makeup.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>MAQUILLAJE </h2>
-                        <a href="photo-detail.html">VER ESTILOS</a>
+                        <a href="maquillaje.html">¡quiero!</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
-                    <span class="tm-text-gray-light">15 Ene 2025</span>
+                    <span class="tm-text-gray-light">25 Ene 2025</span>
                     <span>12,460 views</span>
                 </div>
             </div>
@@ -119,7 +119,7 @@ https://templatemo.com/tm-556-catalog-z
                     <img src="img/video-game-developer.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>otros servicios. </h2>
-                        <a href="photo-detail.html">INSPECCIONAR </a>
+                        <a href="others.html">INSPECCIONAR </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -317,10 +317,10 @@ https://templatemo.com/tm-556-catalog-z
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">OTROS ENLACES</h3>
                     <ul class="tm-footer-links pl-0">
-                        <li><a href="#">Advertise</a></li>
-                        <li><a href="#">Support</a></li>
-                        <li><a href="#">Our Company</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#">ANUNCIOS</a></li>
+                        <li><a href="#">SOPORTE</a></li>
+                        <li><a href="#">¿QUIÉNES SOMOS?</a></li>
+                        <li><a href="#">CONTACTO</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
@@ -347,7 +347,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-             24 de enero de 2025, 12:45 p.m.</span>
+             27 de enero de 2025, 6:09 a.m.</span>
     </footer>
     
     <script src="js/plugins.js"></script>
