--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/crema.png" id="QRE">
+            <img src="img/LOGO.png" id="QRE">
             <a class="navbar-brand" href="index.html">
                 PASIÓN PARA ELLA Y ÉL<br>
                                     <span class="descr">Productos corporales y de belleza</span>
@@ -222,7 +222,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-            15 de enero de 2025, 10:50 a.m.</span>
+            30 de enero de 2025, 6:13 a.m.</span>
     </footer>
     
     <script src="js/plugins.js"></script>
