--- a/contact.html
+++ b/contact.html
@@ -195,9 +195,9 @@ https://templatemo.com/tm-556-catalog-z
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Our Links</h3>
                     <ul class="tm-footer-links pl-0">
                         <li><a href="#">Advertise</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="https://linktr.ee/neastronaut">Support</a></li>
                         <li><a href="#">Our Company</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="index.html">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
