--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ https://templatemo.com/tm-556-catalog-z
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <h3 class="tm-text-primary mb-4 tm-footer-title">OTROS ENLACES</h3>
                     <ul class="tm-footer-links pl-0">
-                        <li><a href="#">ANUNCIOS</a></li>
+                        <li><a href="https://www.blogger.com/about/?hl=es" target="_blank">ANUNCIOS</a></li>
                         <li><a href="https://linktr.ee/neastronaut">SOPORTE</a></li>
                         <li><a href="#">¿QUIÉNES SOMOS?</a></li>
                         <li><a href="contact.html">CONTACTO</a></li>
@@ -347,7 +347,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-             30 de enero de 2025, 6:30 a.m.</span>
+             30 de enero de 2025, 6:39 a.m.</span>
     </footer>
     
     <script src="js/plugins.js"></script>
