--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-             30 de enero de 2025, 6:39 a.m.</span>
+             1 de febrerp de 2025, 6:15 a.m.</span>
     </footer>
     
     <script src="js/plugins.js"></script>
