--- a/portfolio/humectantes/HUMECTANT.html
+++ b/portfolio/humectantes/HUMECTANT.html
@@ -265,7 +265,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-            27 de enero de 2025, 6:26 a.m.</span>
+            1 de febrero de 2025, 6:16 a.m.</span>
     </footer>
     
     <script src="../../js/plugins.js"></script>
