--- a/contact.html
+++ b/contact.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ES">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PASIÓN PARA ELLA Y EL</title>
+    <title>PASIÓN PARA ELLA Y EL - CONTACTO</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -195,9 +195,9 @@ https://templatemo.com/tm-556-catalog-z
                     <h3 class="tm-text-primary mb-4 tm-footer-title">Our Links</h3>
                     <ul class="tm-footer-links pl-0">
                         <li><a href="#">Advertise</a></li>
-                        <li><a href="https://linktr.ee/neastronaut">Support</a></li>
+                        <li><a href="#">Support</a></li>
                         <li><a href="#">Our Company</a></li>
-                        <li><a href="index.html">Contact</a></li>
+                        <li><a href="#">Contact</a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
@@ -222,7 +222,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-            30 de enero de 2025, 6:13 a.m.</span>
+            15 de enero de 2025, 10:50 a.m.</span>
     </footer>
     
     <script src="js/plugins.js"></script>
