--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@ https://templatemo.com/tm-556-catalog-z
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img src="img/LOGO.png" id="QRE">
-            <a class="navbar-brand" href="index.html">
+            <a class="navbar-brand" href="contact.html">
                 PASIÓN PARA ELLA Y ÉL<br>
                                     <span class="descr">Productos corporales y de belleza</span>
             </a>
@@ -57,6 +57,8 @@ https://templatemo.com/tm-556-catalog-z
     <div class="tm-hero d-flex justify-content-center align-items-center" data-parallax="scroll" data-image-src="img/hero.jpg"></div>
 
     <div class="container-fluid tm-mt-60">
+        <span id="credito">Ultima Modificacion el:<br>
+            28 de febrero de 2025, 8:30 a.m.</span>
         <div class="row tm-mb-50">
             <div class="col-lg-4 col-12 mb-5">
                 <h2 class="tm-text-primary mb-5">FORMULARIO DE CONTACTO</h2>
@@ -202,15 +204,14 @@ https://templatemo.com/tm-556-catalog-z
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <ul class="tm-social-links d-flex justify-content-end pl-0 mb-5">
-                        <li class="mb-2"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                        <li class="mb-2"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/001-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
-                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank"><img src="img/001-facebook.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Facebook from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="img/004-instagram.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Instagram from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/003-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=TikTok from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Tienda from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
                     </ul>
-                    <a href="#" class="tm-text-gray text-right d-block mb-2">Terms of Use</a>
-                    <a href="#" class="tm-text-gray text-right d-block">Privacy Policy</a>
+                    <a href="#" class="tm-text-gray text-right d-block mb-2">Terminos de uso</a>
+                    <a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/pages/cook/cookies.html" class="tm-text-gray text-right d-block" target="_blank">Politica de privacidad</a>
                 </div>
-            </div>
             <div class="row">
                 <div class="col-lg-8 col-md-7 col-12 px-5 mb-3">
                     Copyright 2020 Catalog-Z Company. All rights reserved.
@@ -221,8 +222,7 @@ https://templatemo.com/tm-556-catalog-z
                 </div>
             </div>
         </div>
-        <span id="credito">Ultima Modificacion el:<br>
-            15 de enero de 2025, 10:50 a.m.</span>
+        
     </footer>
     
     <script src="js/plugins.js"></script>
