--- a/videos.html
+++ b/videos.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ES">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PASIÓN PARA ELLA Y EL</title>
+    <title>GALERIA, PASIÓN PARA ELLA Y EL</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="fontawesome/css/all.min.css">
     <link rel="stylesheet" href="css/templatemo-style.css">
@@ -27,40 +27,40 @@ https://templatemo.com/tm-556-catalog-z
     </div>
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
-            <img src="img/crema.png" id="QRE">
-            <a class="navbar-brand" href="index.html">
-                PASIÓN PARA ELLA Y ÉL<br>
-                                    <span class="descr">Productos corporales y de belleza</span>
+            <img src="img/LOGO.png" id="QRE">
+            <a class="navbar-brand" href="videos.html">
+                TU PIEL, PASIÓN POR TÍ<br>
+                                    <span class="descr">PASIÓN PARA ELLA Y EL. </span>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-1" href="index.html">INICIO</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-2 active" href="videos.html">VIDEOS</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-3" href="https://www.blogger.com/about/?hl=es" target="_blank">INFORMACION</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link nav-link-4" aria-current="page" href="contact.html">CONTACTO</a>
-                    </li>
-                </ul>
+            <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link nav-link-1" aria-current="page" href="index.html">INICIO</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-2 active" href="videos.html">GALERIA </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-3" href="https://www.blogger.com/about/?hl=es" target="_blank">INFORMACION</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link nav-link-4" href="contact.html">CONTACTO</a>
+                </li>
+            </ul>
             </div>
         </div>
     </nav>
 
     <div class="tm-hero d-flex justify-content-center align-items-center" id="tm-video-container">
         <video autoplay muted loop id="tm-video">
-            <source src="video/hero.mp4" type="video/mp4">
+            <source src="video/Project2.mp4" type="video/mp4">
         </video>  
         <i id="tm-video-control-button" class="fas fa-pause"></i>
         <form class="d-flex position-absolute tm-search-form">
-            <input class="form-control tm-search-input" type="search" placeholder="Search" aria-label="Search">
+            <input class="form-control tm-search-input" type="search" placeholder="BUSCAR" aria-label="Search">
             <button class="btn btn-outline-success tm-search-btn" type="submit">
                 <i class="fas fa-search"></i>
             </button>
@@ -68,13 +68,15 @@ https://templatemo.com/tm-556-catalog-z
     </div>
 
     <div class="container-fluid tm-container-content tm-mt-60">
+        <span id="credito">Ultima Modificacion el:<br>
+            28 de febrero de 2025, 8:29 a.m.</span>
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
-                Latest Videos
+                RETRO CATEGORIAS 
             </h2>
             <div class="col-6 d-flex justify-content-end align-items-center">
                 <form action="" class="tm-text-primary">
-                    Page <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> of 180
+                    HOJA <input type="text" value="1" size="1" class="tm-input-paging tm-text-primary"> DE...
                 </form>
             </div>
         </div>
@@ -83,8 +85,8 @@ https://templatemo.com/tm-556-catalog-z
                 <figure class="effect-ming tm-video-item">
                     <img src="img/img-01.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Hangers</h2>
-                        <a href="video-detail.html">View more</a>
+                        <h2>Producto principal </h2>
+                        <a href="portafolio2/humectanteenlace.html">DESCUBRIR </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -107,10 +109,10 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="img/img-03.jpg" alt="Image" class="img-fluid">
+                    <img src="../../PHOTO/PORTADAG.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
-                        <h2>Clocks</h2>
-                        <a href="video-detail.html">View more</a>
+                        <h2>GALERIA </h2>
+                        <a href="portfolio/GALERIA/gallery.html">VER </a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -320,13 +322,13 @@ https://templatemo.com/tm-556-catalog-z
                 </div>
                 <div class="col-lg-3 col-md-6 col-sm-6 col-12 px-5 mb-5">
                     <ul class="tm-social-links d-flex justify-content-end pl-0 mb-5">
-                        <li class="mb-2"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a></li>
-                        <li class="mb-2"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a></li>
-                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/001-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
-                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=FreepikFreepika from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.facebook.com/profile.php?id=61564821212499" target="_blank"><img src="img/001-facebook.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Facebook from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.instagram.com/pasionellayel?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank"><img src="img/004-instagram.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Instagram from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://www.tiktok.com/@pasionparaellayel?is_from_webapp=1&sender_device=pc" target="_blank"><img src="img/003-tik-tok.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=TikTok from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
+                        <li class="iconr"><a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/" target="_blank"><img src="img/002-store.png" class="iconr" divIcons made by a href=httpswww.freepik.com title=Tienda from a href=httpswww.flaticon.com title=Flaticonwww.flaticon.comadiv></a></li>
                     </ul>
-                    <a href="#" class="tm-text-gray text-right d-block mb-2">Terms of Use</a>
-                    <a href="#" class="tm-text-gray text-right d-block">Privacy Policy</a>
+                    <a href="#" class="tm-text-gray text-right d-block mb-2">Terminos de uso</a>
+                    <a href="https://neamstrong.github.io/Allium_Ampeloprasum_var._Porrum-NofC/pages/cook/cookies.html" class="tm-text-gray text-right d-block" target="_blank">Politica de privacidad</a>
                 </div>
             </div>
             <div class="row">
