--- a/videos.html
+++ b/videos.html
@@ -69,7 +69,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <span id="credito">Ultima Modificacion el:<br>
-            28 de febrero de 2025, 8:29 a.m.</span>
+            28 de febrero de 2025, 8:57 a.m.</span>
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
                 RETRO CATEGORIAS 
@@ -109,7 +109,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
                 <figure class="effect-ming tm-video-item">
-                    <img src="../../PHOTO/PORTADAG.jpg" alt="Image" class="img-fluid">
+                    <img src="img/PORTADAG.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>GALERIA </h2>
                         <a href="portfolio/GALERIA/gallery.html">VER </a>
