--- a/videos.html
+++ b/videos.html
@@ -116,8 +116,8 @@ https://templatemo.com/tm-556-catalog-z
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
-                    <span>18 Oct 2020</span>
-                    <span>11,906 views</span>
+                    <span>28 FEB 2025 </span>
+                    <span>Bcd158</span>
                 </div>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6 col-sm-6 col-12 mb-5">
