--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-container-content tm-mt-60">
         <span id="credito">Ultima Modificacion el:<br>
-            27 de febrero de 2025, 3:43 a.m.</span>
+            22 de abril de 2025, 9:01 a.m.</span>
         <div class="row mb-4">
             <h2 class="col-6 tm-text-primary">
                 RETRO, PASIÓN PARA ELLA Y ÉL
