--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@ https://templatemo.com/tm-556-catalog-z
 
     <div class="container-fluid tm-mt-60">
         <span id="credito">Ultima Modificacion el:<br>
-            28 de febrero de 2025, 8:30 a.m.</span>
+            22 de abril de 2025, 9:03 a.m.</span>
         <div class="row tm-mb-50">
             <div class="col-lg-4 col-12 mb-5">
                 <h2 class="tm-text-primary mb-5">FORMULARIO DE CONTACTO</h2>
