--- a/video-detail.html
+++ b/video-detail.html
@@ -44,7 +44,7 @@ https://templatemo.com/tm-556-catalog-z
                         <a class="nav-link nav-link-2" href="videos.html">VIDEOS</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link nav-link-3" href="https://www.blogger.com/about/?hl=es" target="_blank">INFORMACION</a>
+                        <a class="nav-link nav-link-3" href="https://pasionportiyparaella.blogspot.com/?m=1" target="_blank">INFORMACION</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link nav-link-4 active" aria-current="page" href="contact.html">CONTACTO</a>
