--- a/photo-detail.html
+++ b/photo-detail.html
@@ -256,7 +256,7 @@ https://templatemo.com/tm-556-catalog-z
             </div>
         </div>
         <span id="credito">Ultima Modificacion el:<br>
-            15 de enero de 2025, 10:50 a.m.</span>
+            22 de abril de 2025, 11:12 a.m.</span>
     </footer>
     
     <script src="js/plugins.js"></script>
